@@ -1,3 +1,5 @@
+2006/4/1 -- released version 20060401_trunk
+
 2006/3/31 -- released version 20060331_trunk
 
 2006/3/30 -- released version 20060330_trunk
